<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Sergio Aragonés. All rights reserved.
  ~ Created by Sergio Aragonés on 18/10/2020
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    >

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        style="@style/UsernameEditText"
        />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_username"
        app:layout_constraintStart_toStartOf="@+id/edit_text_username"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_username"
        style="@style/PasswordEditText"
        />

    <ImageButton
        android:id="@+id/image_button_password"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintTop_toTopOf="@+id/edit_text_password"
        style="@style/PasswordEyeButton"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_language"
        app:layout_constraintEnd_toEndOf="@+id/radio_group_language"
        app:layout_constraintStart_toStartOf="@+id/radio_group_language"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintVertical_bias="1.0"
        style="@style/AppLanguageTextView"
        />

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        >

        <RadioButton
            android:id="@+id/radio_button_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            style="@style/RadioButtonLanguage"
            />

        <RadioButton
            android:id="@+id/radio_button_es"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            style="@style/RadioButtonLanguage"
            />

    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RoundedButton.Action"
        />

</androidx.constraintlayout.widget.ConstraintLayout>